# DRF_BulletinBoard

./: README.md  manage.py  pyproject.toml
myboard/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_comment.py
users/: admin.py  models.py  permissions.py  serializers.py  views.py
users/migrations/: 0001_initial.py
