[tool.poetry]
name = "drf-bulletinboard"
version = "0.1.0"
description = ""
authors = ["Heo-JunHyeok <junhyeok_1996@naver.com>"]
readme = "README.md"
packages = [{include = "drf_bulletinboard"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-dotenv = "^1.4.2"
pillow = "^9.4.0"
django-cors-headers = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
